Fix video caption control position on mobile device

--- a/assets/src/css/godam-player.scss
+++ b/assets/src/css/godam-player.scss
@@ -1151,7 +1151,7 @@
 		 .vjs-control-bar > .vjs-subs-caps-button.vjs-control {
 			 position: absolute;
 			 bottom: 0;
-			 right: calc(2 * 40px);
+			 right: calc(3 * 40px);
 			 height: 3em !important;
 		 }
 	 }
